debug image and some refactoring